src/test/deca/syntax/invalid/decaObjet/emptyClass/05badClassLocation.deca
// Description:
//    tests de programme incorrect lexicalement (token 'clas' non reconnu)
//
// Resultats:
//    05badClassLocation.deca:14:0:
//
// Historique:
//    cree le 13/06/2022


{

}
class A {
}